feat: add degenerator impl, and fix for green
Signed-off-by: Matteo Lovisa <Matteo.Lovisa@standardbank.co.za>